# pykolada

./: .gitignore  LICENSE  README.md  README.rst  kolada.sql  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
data/: kpi_groups.json  municipality.json  municipality_groups.json  ou.json
pykolada/: __init__.py  pykolada.py
src/pykolada/: __init__.py  pykolada.py  testing.py
test/: test_pykolada.py
tests/: test_pykolada.py
