[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pykolada"
dynamic = ["version"]
dependencies = ["requests"]
requires-python = ">=3.8"
authors = [
    { name = "Ruben Selander", email = "ruben.selander@nordicintel.com" },
]
description = "A Python package for interacting with Kolada's statistical API."
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
]


[tool.setuptools.dynamic]
version = { attr = "pykolada.__version__" }

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/reversehobo/pykolada"
Documentation = "https://github.com/reversehobo/pykolada/blob/main/README.md"
Repository = "https://github.com/reversehobo/pykolada"
